# generic-llm

./: .gitignore  AZURE-FOUNDRY-SMOKE-TEST.md  LICENSE  README.md  pyproject.toml  test-struct-out.zsh
.llm/: agent-invisible-files.txt  agent-readonly-files.txt  common-sentences-append.txt  llm-settings.toml
.llm-memory/: ADR-model-listing-live-probe.md  ADR-reasoning-effort-ladder.md  CONVENTIONS-file-attachments.md  CONVENTIONS-multi-provider-routing.md  CONVENTIONS-porting-adapters-from-reference.md  CONVENTIONS-schemas-and-instructions.md  CONVENTIONS-usage-cost-emission.md  CONVENTIONS-zai-glm-adapter.md  GOTCHA-azure-foundry-constraints.md  IDEAS-key-loading-secret-managers.md  index.md
data/: prices.json
data/instructions/: code-review.md  commit-msg.md  terse.md
data/schemas/: commit-message.json  email-extract.json  pick-int.json
src/gllm/: __init__.py  cli.py  config.py  domain.py  ports.py  pricing.py  reasoning.py  routing.py  usage.py
src/gllm/adapters/: _capabilities.py  anthropic.py  azure_anthropic.py  azure_openai.py  deepseek.py  gemini.py  grok.py  openai.py  zai.py
tests/: test_capabilities.py  test_cli_reasoning_gate.py  test_mime_sniff.py  test_pricing.py  test_reasoning.py  test_routing.py  test_usage.py  test_work_mode_thinking.py
