[project]
name = "generic-llm"
version = "0.1.0"
description = "gllm — a minimal Unix-pipe-friendly CLI for calling LLMs (Anthropic, OpenAI, Gemini)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "openai>=2.15.0",
    "google-genai>=1.59.0",
]

[project.scripts]
gllm = "gllm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gllm"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
